[tool.poetry]
name = "things-backend"
version = "0.1.0"
description = ""
authors = ["massimobiagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi-mqtt = "^2.0.0"
pydantic-settings = "^2.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
